--- a/exercises/ex1/myDocument-SS2.tex
+++ b/exercises/ex1/myDocument-SS2.tex
@@ -4,7 +4,7 @@
 % Compile: XeLaTeX BibTeX XeLaTeX XeLaTeX
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass{scrartcl}
+\documentclass[10pt, paper=a4, abstracton]{scrartcl}
 
 %%%%%%%%%%%%%PACKAGES%%%%%%%%%%%%%
 
