--- a/exercises/ex1/myDocument-SS3.tex
+++ b/exercises/ex1/myDocument-SS3.tex
@@ -4,7 +4,7 @@
 % Compile: XeLaTeX BibTeX XeLaTeX XeLaTeX
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\documentclass{scrartcl}
+\documentclass[10pt, paper=a4, abstracton]{scrartcl}
 
 %%%%%%%%%%%%%PACKAGES%%%%%%%%%%%%%
 
@@ -19,6 +19,8 @@
 \begin{document}
 
 This is my first \LaTeX\ file. 
+
+This an example with a word in \textbf{bold}.
 
 \end{document}
 
