--- a/texfiles-beamer/tex-literature.bib
+++ b/texfiles-beamer/tex-literature.bib
@@ -483,7 +483,7 @@
 
 @misc{Freitag&MyP15a,
 	Author = {Freitag, Constantin and Machicao y Priemer, Antonio},
-	Title = {\LaTeX -Einführung für Linguisten},
+	Title = {La{T}e{X}-{E}inführung für {L}inguisten},
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/latex-einfuehrung},
 	URLdate = {12.04.2015},
@@ -1054,7 +1054,7 @@
 
 @misc{MyP&Kerkhof16a,
 	Author = {Machicao y Priemer, Antonio and Kerkhof, Robyn},
-	Title = {\LaTeX -Einführung für Linguisten -- Slides},
+	Title = {La{T}e{X}-{E}inführung für {L}inguisten -- Slides},
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/latex-einfuehrung},
 	URLdate = {23.02.2016},
