--- a/Slides-Files/Slides/01-LaTeX01_master.tex
+++ b/Slides-Files/Slides/01-LaTeX01_master.tex
@@ -4,8 +4,8 @@
 %% Antonio Machicao y Priemer
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-%\documentclass[a4paper,10pt, bibtotoc]{beamer}
-\documentclass[a4paper,10pt,handout]{beamer}
+\documentclass[a4paper,10pt, bibtotoc]{beamer}
+%\documentclass[a4paper,10pt,handout]{beamer}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %% PACKAGES & COMMANDS 
@@ -22,8 +22,8 @@
 
 \begin{document}
 
-%\togglefalse{handout}
-\toggletrue{handout}
+\togglefalse{handout}
+%\toggletrue{handout}
 
 \input{01-LaTeX01_text}
 
@@ -64,6 +64,14 @@
 		\item Link: Akzente und Sonderzeichen in \LaTeX .\\
 		\url{https://de.wikibooks.org/wiki/LaTeX/_Akzente_und_Sonderzeichen}\\
 		{[}Zugriff: 10.10.2017]
+
+		\item Link: \LaTeX /Special Characters.\\
+		\url{https://en.wikibooks.org/wiki/LaTeX/Special_Characters}\\
+		{[}Zugriff: 02.01.2019]
+		
+		\item Link: CTAN -- The Comprehensive \TeX\ Archive Network .\\
+		\url{http://www.ctan.org/}\\
+		{[}Zugriff: 02.01.2019]
 
 		\item Software: \ltxpack{MiKTeX}\\
 		\url{https://miktex.org/} \\
@@ -113,8 +121,8 @@
 %	\bibliographystyle{../../texfiles-beamer/deChicagoMyP}
 
 %	%English
-	\bibliographystyle{../../texfiles-beamer/enChicagoMyP} 
-
+%	\bibliographystyle{../../texfiles-beamer/enChicagoMyP} 
+	\bibliographystyle{chicago} 
 
 {\footnotesize
 	\bibliography{../../texfiles-beamer/tex-literature}
