--- a/exercises/ex1/myDocument-SS4.tex
+++ b/exercises/ex1/myDocument-SS4.tex
@@ -24,18 +24,17 @@
 
 \maketitle
 
-This is my first \LaTeX\ file. 
+\tableofcontents
 
-This an example with a word in \textbf{bold}. This an example with a word in \textit{italics}.
 
-\begin{center}
-	This sentence is centered.
-\end{center}
+\section[Introduction]{A short introduction}
 
-This sentence is not centered. 
+This is an sample text. The only purpose of this text is to show how to work with \LaTeX . It is not necessary that this text has any meaning. It should only show some properties of the system we are using.
 
-This sentence has a {\Huge huge} word. This sentence is in normal size.
 
+\subsection{A note on the data}
+
+This is an sample text. The only purpose of this text is to show how to work with \LaTeX . It is not necessary that this text has any meaning. It should only show some properties of the system we are using.
 
 
 \end{document}
