--- a/texfiles-beamer/tex-literature.bib
+++ b/texfiles-beamer/tex-literature.bib
@@ -468,7 +468,7 @@
 	Author = {Finkbeiner, Rita and Meibauer, Jörg},
 	Title = {\gq{Festschrift oder nicht Festschrift}: Syntax, Semantik und Pragmatik einer peripheren Konstruktion},
 	BookTitle = {Zwischen Kern und Peripherie: Untersuchungen zu Randbereichen in Sprache und Grammatik},
-	Editor = {Machicao y Priemer, Antonio and Nolda, Andreas and Sioupi, Athina},
+	Editor = {{Machicao y Priemer}, Antonio and Nolda, Andreas and Sioupi, Athina},
 	Publisher = {De Gruyter},
 	Address = {Berlin},
 	Pages = {69--88},
@@ -482,7 +482,7 @@
 	Year = {2003} }
 
 @misc{Freitag&MyP15a,
-	Author = {Freitag, Constantin and Machicao y Priemer, Antonio},
+	Author = {Freitag, Constantin and {Machicao y Priemer}, Antonio},
 	Title = {La{T}e{X}-{E}inführung für {L}inguisten},
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/latex-einfuehrung},
@@ -523,7 +523,7 @@
 	Year = {2016} }
 
 @incollection{Fries&MyP16a,
-	Author = {Fries, Norbert and Machicao y Priemer, Antonio},
+	Author = {Fries, Norbert and {Machicao y Priemer}, Antonio},
 	Title = {X-Bar-Theorie},
 	BookTitle = {Metzler Lexikon Sprache},
 	Editor = {Glück, Helmut and Rödel, Michael},
@@ -534,7 +534,7 @@
 	Year = {2016} }
 
 @incollection{Fries&MyP16b,
-	Author = {Fries, Norbert and Machicao y Priemer, Antonio},
+	Author = {Fries, Norbert and {Machicao y Priemer}, Antonio},
 	Title = {Akzeptabilität},
 	BookTitle = {Metzler Lexikon Sprache},
 	Editor = {Glück, Helmut and Rödel, Michael},
@@ -810,7 +810,7 @@
 	Year = {2005} }
 
 @book{Knuth1986,
-	address = {Boston, MA},
+	address = {Boston},
 	publisher = {Addison-Wesley},
 	author = {Knuth, Donald E.},
 	title = {The \TeX book},
@@ -826,7 +826,7 @@
 
 @misc{Kohm&Co13a,
 	Author = {Kohm, Markus and Morawski, Jens-Uwe},
-	Title = {Die Anleitung: KOMA-Script},
+	Title = {Die {A}nleitung: {KOMA}-{S}cript},
 	URL = {http://www.ctan.org/pkg/koma-script},
 	URLdate = {28.01.2014},
 	Howpublished = {Online-Handbuch},
@@ -843,7 +843,8 @@
 
 @book{Kopka94a,
 	Author = {Kopka, Helmut},
-	Title = {\LaTeX: Einführung. Band 1},
+	Title = {\LaTeX: Einführung},
+	Volume = {1},
 	Publisher = {Addison-Wesley},
 	Address = {Bonn},
 	Year = {1994} }
@@ -991,7 +992,7 @@
 	Author = {{Machicao y Priemer}, Antonio},
 	Title = {Differentielle {O}bjektmarkierung: Spezifizität und {A}kkusativ im {S}panischen},
 	BookTitle = {Zwischen {K}ern und {P}eripherie},
-	Editor = {Machicao y Priemer, Antonio and Nolda, Andreas and Sioupi, Athina},
+	Editor = {{Machicao y Priemer}, Antonio and Nolda, Andreas and Sioupi, Athina},
 	Publisher = {De Gruyter},
 	Address = {Berlin},
 	Pages = {103--130},
@@ -1010,7 +1011,7 @@
 
 @misc{MyP17c,
 	Author = {{Machicao y Priemer}, Antonio},
-	Title = {Hinweise für Seminararbeiten},
+	Title = {Hinweise für {S}eminararbeiten},
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/downloads/myp2018-04-06-hinweise_seminararbeit.pdf},
 	URLdate = {16.10.2018},
@@ -1053,12 +1054,12 @@
 	Year = {2018} }
 
 @misc{MyP&Kerkhof16a,
-	Author = {Machicao y Priemer, Antonio and Kerkhof, Robyn},
-	Title = {La{T}e{X}-{E}inführung für {L}inguisten -- Slides},
+	Author = {{Machicao y Priemer}, Antonio and Kerkhof, Robyn},
+	Title = {La{T}e{X}-{E}inführung für {L}inguisten -- {S}lides},
 	Publisher = {Humboldt-Universität zu Berlin},
 	URL = {https://www.linguistik.hu-berlin.de/de/staff/amyp/latex-einfuehrung},
 	URLdate = {23.02.2016},
-	Howpublished = {Präsentation beim 7. linguistischen Methodenworkshop an der Humboldt-Universität zu Berlin -- 22.--24. Februar 2016},
+	Howpublished = {Presentation at the 7\up{th} linguistischer Methodenworkshop in the Humboldt-Universität zu Berlin -- 22--24 February 2016},
 	Year = {2016} }
 
 @book{Maienborn&Co11a,
@@ -1247,10 +1248,10 @@
 }
 
 @incollection{Nolda&Co14a,
-	Author = {Nolda, Andreas and Machicao y Priemer, Antonio and Sioupi, Athina},
+	Author = {Nolda, Andreas and {Machicao y Priemer}, Antonio and Sioupi, Athina},
 	Title = {Die {K}ern/{P}eripherie-Unterscheidung: {P}robleme und {P}ositionen},
 	BookTitle = {Zwischen Kern und Peripherie: Untersuchungen zu Randbereichen in Sprache und Grammatik},
-	Editor = {Machicao y Priemer, Antonio and Nolda, Andreas and Sioupi, Athina},
+	Editor = {{Machicao y Priemer}, Antonio and Nolda, Andreas and Sioupi, Athina},
 	Publisher = {De Gruyter},
 	Address = {Berlin},
 	Pages = {9--23},
