--- a/1-1.md
+++ b/1-1.md
@@ -1,40 +1,43 @@
 # Tasks for class 1-1
 
-- Create a new document of type scrartcl
-- add metadata for author and title
+- Create a new document with the documentclass `scrartcl`
+- add metadata for `\author` and `\title`
 - add sections "Introduction", "Study", "Findings", "Conclusion"
 - add some dummy text to the sections 
-- add \label's to the sections
+- add `\label{}`'s to the sections
 - rewrite your intro and refer to the sections by label 
 
 ----
 
-- change your documentclass to scrbook and recompile
+- change your `documentclass` to `scrbook` and recompile
 - what differences do you see?
-- add a \chapter above the \section{}s and recompile
-- change the documentclass back to scrartcl and recompile
-- comment out the line with \chapter and recompile 
+- add a `\chapter` above the `\section{}`s and recompile
+- change the `documentclass` back to `scrartcl` and recompile
+- comment out the line with `\chapter` and recompile 
+- *change `documentclass` to `langscibook`
+- ** use `\documentclass[output=paper]{langscibook}`
 
 
 ----
-- add some \subsection{}s \subsubsection{}s and \paragraph{}s. 
-- add \tableofcontents at the beginning
-- add another \tableofcontents at the end
+- add some `\subsection{}`s `\subsubsection{}`s and `\paragraph{}`s. 
+- add `\tableofcontents` at the beginning
+- add another `\tableofcontents` at the end
 
 ----
 
-- remove one closing brace from a \section{}, recompile and see what happens
-- change a \section to \Section, recompile and see what happens
-- choose a \section{} and remove both braces and everything in between. Recompile and see what happens
+- remove one closing brace from a `\section{}`, recompile and see what happens
+- change a `\section` to `\Section`, recompile and see what happens
+- choose a `\section{}` and remove both braces and everything in between. Recompile and see what happens
 
 ---- 
 - play around with the following commands 
  - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
  - try nesting them 
- - add a \footnote{}
- - add more footnotes 
- - *how to refer to a foonote number? 
-  
+ - add a `\footnote{}`
+ - add more `\footnote{}`s 
+ - *how to refer to a footnote number? 
+
+
 ----
 
 - Play around with the {itemize} and {enumrate} environments
@@ -49,7 +52,11 @@
 ---- 
 - add some paragraphs with random text
 - use double new lines, `\\` and `\noindent` to control indentation
+
 ---- 
+
+- Produce the sentence "The circumflex ^ is used by participants #2 & #3"
+- Produce the output "The command \ref{} is used to refer to \label{}s"
  
 
 
