change to enumerate

--- a/1-1.md
+++ b/1-1.md
@@ -1,62 +1,62 @@
 # Tasks for class 1-1
 
-- Create a new document with the documentclass `scrartcl`
-- add metadata for `\author` and `\title`
-- add sections "Introduction", "Study", "Findings", "Conclusion"
-- add some dummy text to the sections 
-- add `\label{}`'s to the sections
-- rewrite your intro and refer to the sections by label 
+1. Create a new document with the documentclass `scrartcl`
+1. add metadata for `\author` and `\title`
+1. add sections "Introduction", "Study", "Findings", "Conclusion"
+1. add some dummy text to the sections 
+1. add `\label{}`'s to the sections
+1. rewrite your intro and refer to the sections by label 
 
 ----
 
-- change your `documentclass` to `scrbook` and recompile
-- what differences do you see?
-- add a `\chapter` above the `\section{}`s and recompile
-- change the `documentclass` back to `scrartcl` and recompile
-- comment out the line with `\chapter` and recompile 
-- *change `documentclass` to `langscibook`
-- ** use `\documentclass[output=paper]{langscibook}`
+1. change your `documentclass` to `scrbook` and recompile
+1. what differences do you see?
+1. add a `\chapter` above the `\section{}`s and recompile
+1. change the `documentclass` back to `scrartcl` and recompile
+1. comment out the line with `\chapter` and recompile 
+1. *change `documentclass` to `langscibook`
+1. ** use `\documentclass[output=paper]{langscibook}`
 
 
 ----
-- add some `\subsection{}`s `\subsubsection{}`s and `\paragraph{}`s. 
-- add `\tableofcontents` at the beginning
-- add another `\tableofcontents` at the end
+1. add some `\subsection{}`s `\subsubsection{}`s and `\paragraph{}`s. 
+1. add `\tableofcontents` at the beginning
+1. add another `\tableofcontents` at the end
 
 ----
 
-- remove one closing brace from a `\section{}`, recompile and see what happens
-- change a `\section` to `\Section`, recompile and see what happens
-- choose a `\section{}` and remove both braces and everything in between. Recompile and see what happens
+1. remove one closing brace from a `\section{}`, recompile and see what happens
+1. change a `\section` to `\Section`, recompile and see what happens
+1. choose a `\section{}` and remove both braces and everything in between. Recompile and see what happens
 
----- 
-- play around with the following commands 
- - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
- - try nesting them 
- - add a `\footnote{}`
- - add more `\footnote{}`s 
- - *how to refer to a footnote number? 
+----
+1. play around with the following commands 
+ 1. `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
+ 1. try nesting them 
+ 1. add a `\footnote{}`
+ 1. add more `\footnote{}`s 
+ 1. *how to refer to a footnote number? 
 
 
 ----
 
-- Play around with the {itemize} and {enumrate} environments
+1. Play around with the {itemize} and {enumrate} environments
 
 ----
-- `\textonehalf + \textonequarter = \textthreequarters`
-- what happens to the spacing? 
-- play around with additional white spaces and see what happens
-- enclose the commands in {} and modify spaces. What changes? 
-- add some ~ and see what changes 
+1. `\textonehalf + \textonequarter = \textthreequarters`
+1. what happens to the spacing? 
+1. play around with additional white spaces and see what happens
+1. enclose the commands in {} and modify spaces. What changes? 
+1. add some ~ and see what changes 
 
----- 
-- add some paragraphs with random text
-- use double new lines, `\\` and `\noindent` to control indentation
+----
+1. add some paragraphs with random text
+1. use double new lines, `\\` and `\noindent` to control indentation
 
----- 
+----
 
-- Produce the sentence "The circumflex ^ is used by participants #2 & #3"
-- Produce the output "The command \ref{} is used to refer to \label{}s"
+1. Produce the sentence "The circumflex ^ is used by participants #2 & #3"
+1. Produce the output "The command \ref{} is used to refer to \label{}s"
  
 
 
