--- a/1-1.md
+++ b/1-1.md
@@ -31,11 +31,11 @@
 
 ----
 1. play around with the following commands 
- 1. `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
- 1. try nesting them 
- 1. add a `\footnote{}`
- 1. add more `\footnote{}`s 
- 1. *how to refer to a footnote number? 
+    - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
+1. try nesting them 
+1. add a `\footnote{}`
+1. add more `\footnote{}`s 
+1. *how to refer to a footnote number? 
 
 
 ----
