--- a/1-1.md
+++ b/1-1.md
@@ -2,7 +2,7 @@
 
 1. Create a new document with the documentclass `scrartcl`
 1. add metadata for `\author` and `\title`
-1. add sections "Introduction", "Study", "Findings", "Conclusion"
+1. add `\section{}`s "Introduction", "Study", "Findings", "Conclusion"
 1. add some dummy text to the sections 
 1. add `\label{}`'s to the sections
 1. rewrite your intro and refer to the sections by label 
@@ -31,7 +31,7 @@
 
 ----
 1. play around with the following commands 
-    - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
+    - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\texttt{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
 1. try nesting them 
 1. add a `\footnote{}`
 1. add more `\footnote{}`s 
@@ -40,7 +40,9 @@
 
 ----
 
-1. Play around with the {itemize} and {enumrate} environments
+1. Play around with the `{itemize}` and `{enumerate}` environments
+1. Create nested lists
+1. use `\item[XXX]`
 
 ----
 1. `\textonehalf + \textonequarter = \textthreequarters`
