add tabular examples

--- a/1-1.tex
+++ b/1-1.tex
@@ -1,8 +1,9 @@
-\documentclass{scrartcl} 
+\documentclass[output=paper]{langscibook} 
 
 \title{Logical treatment of documents}
 \author{Ludwig Wittgenstein}
 
+\newcommand{\macronacute}[1]{\={\={\={#1}}}}
 \begin{document}
 
 \maketitle
@@ -17,7 +18,20 @@ In this paper, I will discuss logic (Section \ref{sec:logic}) before I conclude 
 
 \section{Logic}\label{sec:logic}
 
+$a^2+b^2=c^2$
+
+$$a^2+b^2=c^2$$
+
+\[a^2+b^2=c^2\]
+
+$$ x= \frac{-b\pm\sqrt{b^2-4ac}}{2a} $$
 \section{Conclusion}\label{sec:conclusion}
 
 \textonehalf+\textonequarter=\textthreequarters
+$
+\aleph     \emptyset   \neg    \infty  \surd
+$
+ 
+
+\macronacute{x}
 \end{document}
