--- a/2-1.md
+++ b/2-1.md
@@ -12,6 +12,11 @@
 - *use the package `subfigure` and try `\subfigure[My caption]{\includegraphics{myfile.jpg}}` inside the `{figure}` environment. 
 
 ----
+- add a couple of additional images 
+- experiment with the placement parameters `[h]`,`[t]`,`[b]`,`[p]`
+- try `\documentclass[draft]{scrartcl}`
+
+----
 - create a centered 3x3  tabular (1,2,3,4),(5,6,7,8),(9,10,11,12),(13,14,15,16)
 - change the column definition to `l` and `r`
 - change one column definition to `p{5cm}`
