--- a/1-1.md
+++ b/1-1.md
@@ -32,6 +32,7 @@
 ----
 1. play around with the following commands 
     - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\texttt{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
+    - `\small`, `\large`, `\normalsize`, `\footnotesize`, `\scriptsize`, `\tiny`
 1. try nesting them 
 1. add a `\footnote{}`
 1. add more `\footnote{}`s 
