--- a/1-1.md
+++ b/1-1.md
@@ -33,6 +33,7 @@
 1. play around with the following commands 
     - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\texttt{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
     - `\small`, `\large`, `\normalsize`, `\footnotesize`, `\scriptsize`, `\tiny`
+    - `\itshape` `\scshape` `\bfseries` `\ttfamily` `\sffamily` 
 1. try nesting them 
 1. add a `\footnote{}`
 1. add more `\footnote{}`s 
@@ -44,6 +45,13 @@
 1. Play around with the `{itemize}` and `{enumerate}` environments
 1. Create nested lists
 1. use `\item[XXX]`
+
+
+---- 
+1. Investigate the difference between ', " and ` when quoting
+
+----
+- Test the `{quote}` environment
 
 ----
 1. `\textonehalf + \textonequarter = \textthreequarters`
