--- a/1-2.md
+++ b/1-2.md
@@ -24,3 +24,8 @@
 - use the commands `\aleph     \emptyset   \neg    \infty  \surd`. Remember you need mathmode for them
 - Download the comprehensive latex symbol list http://mirrors.ctan.org/info/symbols/comprehensive/symbols-a4.pdf
 - play around and create custom commands
+
+---- 
+- `\underline` the strings "oxo", "ofo", "opo" and "o(p)o"
+- use the package `soul` and `\uline` those strings
+- use the package `ulem` and `\ul` those strings
