--- a/5-2.md
+++ b/5-2.md
@@ -3,3 +3,7 @@
 - create a histogram of the latest German polls
 - *visit www.peil.nl. Create a bar chart of the latest polls (only current numbers)
 - **as above, but include the lighter bars as well. 
+
+----
+- download the pgfplots manual http://mirrors.ctan.org/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf
+- choose some of the plots on pages 78ff of the manual and copypaste the code into your document. Play around.
