--- a/1-1.md
+++ b/1-1.md
@@ -33,7 +33,7 @@
 1. play around with the following commands 
     - `\textit{}`, `\textbf{}`, `\textsc{}`, `\textup{}`, `\texttt{}`, `\emph{}`, `\textsubscript{}`, `\textsuperscript{}`
     - `\small`, `\large`, `\normalsize`, `\footnotesize`, `\scriptsize`, `\tiny`
-    - `\itshape` `\scshape` `\bfseries` `\ttfamily` `\sffamily` 
+    - `\itshape` `\upshape` `\scshape` `\bfseries` `\ttfamily` `\sffamily` 
 1. try nesting them 
 1. add a `\footnote{}`
 1. add more `\footnote{}`s 
@@ -72,5 +72,6 @@
 
 
 
+https://github.com/langsci/latex4linguists/blob/master/1-2.md
 
 
