--- a/5-2.md
+++ b/5-2.md
@@ -7,3 +7,7 @@
 ----
 - download the pgfplots manual http://mirrors.ctan.org/graphics/pgf/contrib/pgfplots/doc/pgfplots.pdf
 - choose some of the plots on pages 78ff of the manual and copypaste the code into your document. Play around.
+
+----
+- use the package todonote
+- play around with `\todo{}` and `\todo[inline]{}`
