--- a/1-2.md
+++ b/1-2.md
@@ -4,7 +4,7 @@
 1. Produce the string àèìòù
 1. Produce the string šŕŷẅǹĺ̄x
 1. Produce the string ãẽĩõũ
-1. Produce aeiou with stacked acute and tilde
+1. Produce aeiou with stacked acute and tilde. You might need to add `\usepackage{libertine}` to your preamble for this to work.
 1. Invert the vertical position of acute and tilde
 
 ----
@@ -29,3 +29,7 @@
 - `\underline` the strings "oxo", "ofo", "opo" and "o(p)o"
 - use the package `soul` and `\uline` those strings
 - use the package `ulem` and `\ul` those strings
+- compare
+
+
+- https://github.com/langsci/latex4linguists/blob/master/2-1.md
