add more solutions

--- a/3-2.md
+++ b/3-2.md
@@ -1,5 +1,9 @@
 # Tasks for class 3-1
 
+exi
+exr
+sn
+
 ----
 - Create the following:
     - (1) John gives Mary the book 
@@ -33,9 +37,13 @@
 
       
 ----
+- Repeat example (1) with \exr
 - Create the following 
     - John gives Mary the book 
        A          R        T
+- repeat the last example with \exp as 
+    - John gives the book to Mary 
+       A             T       R
 
 ----
 - set the font of the examples to italics/roman 
