--- a/sampledoc.tex
+++ b/sampledoc.tex
@@ -10,6 +10,15 @@
 \usepackage{tabularx}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{graphicx}
+\usepackage{tikz}
+\usepackage[linguistics,edges]{forest}
+\usetikzlibrary{positioning} 
+\usepackage{langsci-gb4e}
+\usepackage{jambox}
+\usepackage{langsci-basic}
+\usepackage{langsci-optional}
+\usepackage{pgfplots}
 \begin{document}
 
 \maketitle
@@ -174,12 +183,12 @@ $\aleph \emptyset \neg \infty \surd$
 \section{2-2} 
 Sed blandit sem velit, sed iaculis lectus elementum at. Morbi posuere nibh erat, et aliquam urna dictum sed. Quisque fringilla magna turpis, ut sodales nulla rhoncus non. Donec id lacus velit. Praesent tempus, nibh sed consectetur vulputate, libero ante interdum leo, eu ultrices sapien sapien id dui. Phasellus et rutrum elit. Cras quis quam vitae urna ultrices bibendum vel eget turpis. Ut ultrices ut est sed efficitur. Morbi neque ante, dictum ac diam vel, cursus suscipit nunc. Suspendisse sagittis ut nisl quis hendrerit. Praesent vulputate ac augue eu pretium. Mauris at sollicitudin elit. Suspendisse in interdum ex.
 
-\includegraphics{accadian.png}
+\includegraphics{akkadian.png}
 
    
    Suspendisse diam lectus, laoreet eu maximus eget, sollicitudin et dolor. Phasellus imperdiet elit et arcu porta iaculis. Suspendisse tempor purus nec porta accumsan. Ut tempus augue quam, vitae rhoncus velit hendrerit aliquam. Fusce ac turpis id sem feugiat placerat. Nunc nec ullamcorper nibh, in feugiat lectus. Fusce ut nisl bibendum, tincidunt magna vitae, scelerisque metus. In nec dui vestibulum ante dapibus tempus. Curabitur vel purus rutrum, dictum lectus a, interdum tellus. Etiam hendrerit ante sem, a sodales urna finibus a. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Vivamus posuere nec nibh in gravida. Ut mattis condimentum imperdiet. Vivamus tempus viverra diam quis dictum. Donec nulla mi, facilisis eget sapien eu, tristique malesuada purus. 
    
-\includegraphics[width=\textwidth]{accadian.png}
+\includegraphics[width=\textwidth]{akkadian.png}
 
 Pellentesque egestas, sem quis elementum gravida, ex diam interdum orci, id venenatis justo dolor eget risus. Vestibulum blandit ante et feugiat feugiat. Suspendisse potenti. Sed a sollicitudin enim, nec porttitor felis. Vestibulum sed justo vehicula, ultrices arcu nec, hendrerit lacus. Aenean luctus ipsum sit amet enim sodales placerat sit amet et dolor. In turpis ex, scelerisque in maximus ut, placerat ullamcorper ex. Cras in blandit enim. 
 \includegraphics[height=.3\textheight]{tablet.jpg}
@@ -189,20 +198,20 @@ Maecenas et suscipit mauris. Aliquam laoreet, ligula sed ultrices tristique, dol
 
 
 \begin{figure}[h]
-\includegraphics{accadian.png}
-\caption{Accadian script}
-\label{fig:accadianscript}
+\includegraphics{akkadian.png}
+\caption{Akkadian script}
+\label{fig:akkadianscript}
 \end{figure}
 
 Sed pretium sem sit amet arcu fermentum, sed fringilla nunc volutpat. Nulla tempor pretium viverra. Donec ut justo non risus tempus aliquam quis vitae lectus. Sed ornare viverra tellus et rutrum. In maximus risus in rhoncus rhoncus. Nulla id risus dui. Ut a felis id arcu accumsan ornare eget id erat. Sed ex arcu, dignissim at justo in, finibus aliquet dolor. Mauris sapien mi, faucibus sit amet justo ac, rutrum rutrum turpis. Etiam a nibh eu purus tempor egestas a nec quam. Nunc diam massa, semper a urna eu, placerat semper eros. Maecenas auctor hendrerit nibh quis finibus. 
-Accadian script is illustrated in Figure \ref{fig:accadianscript}
+Akkadian script is illustrated in Figure \ref{fig:akkadianscript}
 
 
 \begin{figure}[t]
-\includegraphics{accadian.png}~
+\includegraphics{akkadian.png}~
 \includegraphics{tablet.jpg}
 
-\caption{Accadian script and tablets}
+\caption{Akkadian script and tablets}
 \end{figure}
 
 
@@ -210,13 +219,19 @@ Accadian script is illustrated in Figure \ref{fig:accadianscript}
 Mauris metus nisl, egestas at blandit sit amet, suscipit id metus. Phasellus hendrerit, lacus nec ultrices ullamcorper, leo elit egestas ligula, in auctor sapien purus eu massa. Maecenas at maximus sapien, eget tempor metus. Nullam lacinia lectus quis erat tristique, a ornare libero dignissim. Etiam diam tortor, tristique at consectetur et, dignissim ac nulla. Sed vehicula, libero id faucibus ultrices, ante dui mattis massa, vitae porttitor libero elit cursus erat. Mauris sit amet dictum ex. Nulla in tellus ac enim vulputate sollicitudin id at lectus. Vestibulum interdum sit amet tortor vel egestas. Pellentesque lacus nibh, venenatis nec pulvinar ac, viverra eu lacus. Integer id leo in enim elementum faucibus. 
 
 \begin{figure}
-\subfigure[Accadian writing system]{\includegraphics[width=.4\textwidth]{accadian.png}}
+\centering
+\subfigure[Akkadian writing system]{\includegraphics[width=.4\textwidth]{akkadian.png}}
+~
 \subfigure[Clay tablets]{\includegraphics[width=.4\textwidth]{tablet.jpg}}
+\caption{Figure with subfigures}
 \end{figure}
 
-\section{Tables}
+
  Nullam gravida id magna eget rhoncus. Proin ullamcorper lacinia lacus, eu consequat diam fermentum condimentum. Nulla augue ante, semper non accumsan a, mattis eu mi. Donec viverra enim lacus, ut volutpat quam lobortis a. Sed in nunc ac orci elementum pellentesque. Nunc posuere enim est, et bibendum neque facilisis ac. Praesent accumsan massa sed neque porttitor accumsan. Donec lacinia ac urna at faucibus. Aliquam gravida feugiat metus vitae malesuada. In porta ligula orci, et mollis dui vehicula ac. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lobortis dui. Praesent tellus urna, tempor a elit nec, cursus sagittis velit. Etiam dapibus vel felis eu hendrerit. In eleifend, lectus in gravida iaculis, urna metus porttitor metus, a condimentum neque magna a nibh.
  
+ 
+
+\section{Tables}
 \begin{tabular}{llll}
  1&2&3&4\\
  5&6&7&8\\
@@ -332,8 +347,8 @@ Table \ref{tab:tabularx66} has lines
  13&14&15&16\\
  \hline
 \end{tabularx}
-\caption{Tabular with many lines}
-\label{tab:tabularxhline}
+\caption{Tabular with horizontally merged cell}
+\label{tab:tabularxmulticolumns}
 \end{table}
 
 
@@ -349,27 +364,338 @@ Table \ref{tab:tabularx66} has lines
  13&14&15&16\\
  \hline
 \end{tabularx}
-\caption{Tabular with horizontally merged cell}
-\label{tab:tabularxhline}
-\end{table}
-
-
-\begin{table}
-\begin{tabularx}{\textwidth}{|X|X|X|X|}
-\hline
- 1&2&3&4\\
-\hline
- 5&& 7 &8\\
-\cline{1-1}\cline{3-4}
- 9&\multirow{-2}{*}{8} &11&12\\
-\hline
- 13&14&15&16\\
- \hline
-\end{tabularx}
 \caption{Tabular with vertically merged cell}
-\label{tab:tabularxhline}
+\label{tab:tabularxmultirow}
 \end{table}
+ 
+\section{3-1} 
 
+\ea\label{ex:john}
+John gives Mary the book
+\z
+
+\ea\label{ex:cat}
+  \ea The cat is on the mat
+  \ex The dog is on the log
+  \z
+\z
+
+\ea
+  \ea[]{\label{ex:mouse1}The mouse is in the house}
+  \ex[*]{\label{ex:mouse2}The is in mouse house the}
+  \z
+\z
+
+While examples \REF{ex:john}, \REF{ex:cat}, and \REF{ex:mouse1} are grammatical, example \REF{ex:mouse2} is not.
+ 
+\ea 
+\gll Mi casa es su casa\\
+     my house is your house\\
+\z
+
+\ea
+\gll Ik ben op zoek naar het P.C. Hoofthuis\\
+     I  am  on search to the P.C. Hoofthuis\\
+\glt `I am looking for the P.C. Hoofthuis.'
+\z
+
+\ea
+\gll mi-m-iq’-adi-ca            hel deč’\\
+\textsc{negvol}-\textsc{m}-do:\textsc{ipfv}-\textsc{proh}-\textsc{ptcl} this  song  \\
+\glt   ‘Don’t sing this song!’
+\z
+
+\ea
+Tên... khátpy ra khuthun tho mo nhy ndo khá than jáwi arak anhi khãm mbaj to no.\\
+\gll   tên           khátpy=ra   khu-thu=n  t<h>o   mo=nhy   ndo khá  tha=n              jáwi        arak    anhi khãm ∅-mba-j             to   no    \\
+      unexpectedly monster=\textsc{nom} 3-load.on.back=\&.\textsc{ss} <3>with go.\textsc{pl}=\&.\textsc{ds} eye skin rupture=\&.\textsc{ss} as.they.say already self in   3-hear-\textsc{nmlz} with lie.down.\textsc{sg}\\
+\glt ‘Unexpectedly, the \textit{khátpy} monster had loaded it (the basket) on his back and was carrying it, and he (the ancestor) woke up and was already lying down listening.’
+\z
+
+    
+\ea
+\gllll La reina de Inglaterra se llama Isabel      \\
+       La regina d' Inghilterra si chiama Elisabetta\\
+       La reine d' Angleterre s' appelle Élisabeth   \\
+       The queen of England \textsc{refl} call Elizabeth    \\
+\glt  ‘The queen of England is called Elizabeth'
+\z
+
+\begin{exe}
+\exr{ex:john} John gives Mary the book  
+\end{exe}
+
+\ea\label{ex:john2}
+\gll John gives Mary the book \\
+     A   ~      R     ~  T \\
+\z
+
+\begin{exe}
+\exp{ex:john2}
+\gll John gives the book to  Mary \\
+     A   ~       ~  T ~ R \\
+\z
+
+
+\ea 
+  \ea {Ik ga het huis uit.}\jambox{(Dutch)}
+  \ex {Ich gehe aus dem Haus.}\jambox{(German)}
+  \ex {I leave the house.}\jambox{(English)}
+  \z
+\z
+ 
+\section{4-1}  
+ 
+\begin{forest}
+[S [NP] [VP]]
+\end{forest}
+
+\begin{forest}
+[S 
+  [NP [The] [girl]] 
+  [VP 
+    [V [eats]] 
+    [NP [the super-tasty chocolate pudding she bought at the festival, roof]]
+  ]
+]
+\end{forest}
+
+\begin{forest}
+[S 
+  [NP [The lady,roof]]
+  [VP 
+    [V [sees] ]
+    [NP [the monkey, roof]]
+    [PP [with the telescope, roof]]
+  ]
+]
+\end{forest}
+
+\begin{forest}
+[S 
+  [NP [The lady,roof]]
+  [VP 
+    [V [sees]]
+    [NP 
+      [the] 
+      [N$'$ [N [monkey]] 
+	[PP [with the telescope, roof]]
+      ]
+    ]
+  ]
+]
+\end{forest}
+
+ \begin{forest} for tree={grow'=east,delay={where content={}{shape=coordinate}{}}}, for descendants={anchor=west, child anchor=west}, forked edges, l sep=2em
+  [Proto-Basa
+    [
+      [Basa-Kontagora]
+      [Basa-Gumna]
+    ]
+    [Koromba]
+    [
+      [Basa-Gurara]
+      [Basa-Kwali]
+    ]
+    [
+      [Basa-Benue]
+      [Basa-Makurdi]
+    ]
+  ]  
+ \end{forest} 
+ 
+ \begin{forest} baseline, where n children=0{tier=word}{} ,for tree={align=center,base=bottom}
+ [ω
+    [ω$_w$
+      [Σ
+        [σ$_s$\\bun]
+        [σ$_w$\\des]
+      ]]
+    [ω$_s$
+      [ω$_s$
+        [ω$_s$
+           [ω$_s$
+              [Σ
+                [σ\\ar]
+              ]]
+           [ω$_w$
+              [Σ
+                [σ\\beits]
+              ]]]
+          [ω$_w$
+              [Σ
+                [σ\\amts]
+              ]]]
+          [ω$_w$
+              [Σ$_w$
+                [σ$_s$\\prä]
+                [σ$_w$\\si]
+              ]
+              [Σ$_s$
+                [σ\\dent]
+              ]]]
+]
+\end{forest}
+ 
+ 
+\begin{forest}
+[CP
+  [DP,name=tgt]
+    [IP
+      [,phantom]
+      [VP
+	[DP]
+	[V$’$ 
+	  [V] 
+	  [\sout{DP},name=src]
+      ]
+    ]
+  ]
+]
+\draw[->] (src) to[out=south west,in=south] (tgt);
+\end{forest}
+
+\section{4-2}
+
+
+\eabox{
+\begin{tikzpicture}
+ \node[rectangle,draw,minimum width = 3cm] (s) {Sebastian};
+ \node[rectangle,draw,minimum width = 3cm, left = 1cm of  s] (a) {Antonio};
+ \node[rectangle,draw,minimum width = 3cm, right = 1cm of  s] (j) {Janet};
+\end{tikzpicture}
+
+}
+
+
+\eabox{ 
+\begin{tikzpicture} 
+\node[draw,minimum width = 8mm, circle] (A) {1};
+\node[draw,minimum width = 8mm,circle, right of=A] (B) {2};
+\node[draw,minimum width = 8mm,circle, right of=B] (C) {3};
+\node[draw,minimum width = 8mm,circle, right of=C] (D) {4};
+\node[draw,minimum width = 8mm,circle, right of=D] (E) {5};
+
+
+\node[minimum width = 8mm, below of=A] (a) {1};
+\node[draw,minimum width = 8mm,circle, right of=a] (b) {2};
+\node[minimum width = 8mm, right of=b] (c) {3};
+\node[draw,minimum width = 8mm,circle, right of=c] (d) {4};
+\node[minimum width = 8mm, right of=d] (e) {5};
+\node[draw,minimum width = 8mm,circle, right of=e] (f) {6};
+\node[minimum width = 8mm, right of=f] (g) {7};
+\node[draw,minimum width = 8mm,circle, right of=g] (h) {8};
+\node[minimum width = 8mm, right of=h] (i) {9};
+\node[draw,minimum width = 8mm,circle, right of=i] (j) {10};
+
+\draw(A.south)--(b.north);
+\draw(B.south)--(d.north);
+\draw(C.south)--(f.north);
+\draw(D.south)--(h.north);
+\draw(E.south)--(j.north);
+
+\end{tikzpicture}
+}
+
+\eabox{
+\begin{tikzpicture} 
+\node[circle,draw,minimum width=2cm] (c) {Concept};
+\node[circle,draw,minimum width=2cm,below=1cm of c,xshift = -1.7cm] (s) {Symbol};
+\node[circle,draw,minimum width=2cm,below=1cm of c,xshift =  1.7cm] (r) {Referent};
+
+\draw(s) -- (r);
+\draw(s) -- (c);
+\draw(c) -- (r);
+\end{tikzpicture}
+}
+
+ 
+\eabox{
+\begin{tikzpicture} 
+\node[circle,draw,minimum width=2cm] (e) {Emma};
+\node[circle,draw,minimum width=2cm,left =  1cm  of e, yshift=-15mm] (d) {Denis};
+\node[circle,draw,minimum width=2cm,below =  1cm  of d] (j) {Janet};
+\node[circle,draw,minimum width=2cm,right =  1cm  of j, yshift=-15mm] (s) {Samira};
+\node[circle,draw,minimum width=2cm,right = 1cm  of e] (g) {Gottfried};
+\node[circle,draw,minimum width=2cm,right = 1cm  of g, yshift=-25mm] (y) {Jussi};
+\node[circle,draw,minimum width=2cm,right = 1.5cm of s, yshift=  5mm ] (w) {Wang};
+
+\draw[dashed](e) -- (g);
+\draw[ultrathick](j) -- (s);
+\draw(d) -- (y);
+\draw[dashed](d) -- (w);
+\draw[thick](d) -- (e);
+\draw(s) -- (y);
+\draw[dashed](y) -- (g);
+\draw[double](w) -- (e);
+\draw(g) -- (j);
+\draw[dashed](g) -- (w);
+\draw(e) -- (y);
+\draw[double](d) -- (s);
+\draw[dashed](j) -- (d);
+\draw(w) -- (j);
+\draw[dashed](y) -- (d);
+\draw(y) -- (s);
+\end{tikzpicture}
+}
+
+\section{5-2}
+\newenvironment{tinyitalicsquote}{\begin{quote}\tiny\itshape}{\end{quote}}
+
+
+Vestibulum turpis lectus, vulputate id lobortis et, mattis ut turpis. Etiam nisi odio, semper vel commodo at, lacinia sed mauris.
+
+\begin{quote}
+ normal quote 
+ Vivamus at blandit risus, eu tristique eros. Morbi venenatis ligula eu consectetur pulvinar. In eget lectus lacinia, vehicula magna in, dapibus dui. Suspendisse potenti. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus facilisis finibus purus quis sagittis.
+
+  
+\end{quote}
+
+Duis pharetra erat id sapien venenatis, id maximus quam mattis. Curabitur tincidunt eros quis lectus scelerisque tincidunt. Curabitur turpis elit, maximus tempor sagittis in, semper et nunc. Ut rhoncus viverra dui, eget gravida orci maximus sit amet.
+\begin{tinyitalicsquote}
+ tiny quote 
+  Donec vulputate nunc nulla, rhoncus tempor nisl laoreet eu. Ut fermentum laoreet velit, a auctor quam consequat et. Etiam sit amet ante fringilla, rhoncus nisi eget, varius est. Nullam id ultrices urna. Cras elit urna, condimentum in ante sed, ullamcorper pharetra mauris. Nullam sollicitudin magna et nunc gravida porta. 
+
+\end{tinyitalicsquote}
+
+\section{5-2}
+ 
+\begin{tikzpicture}
+  \begin{axis}[
+      xlabel={Party},  
+      ylabel={\%}, 
+      axis lines*=left, 
+      width  = \textwidth,
+      height = .3\textheight,
+      nodes near coords,   
+      ymin=0,
+      xtick={1,2,3,4,5,6,7},
+      xticklabels={CDU,GRUENE,SPD,AFD,FDP,LINKE,OTHER} 
+      ]
+      \addplot[ybar,black!80!black,fill=black] plot coordinates {
+	  (1,30) 
+      }; 
+      \addplot[ybar,green!80!black,fill=green] plot coordinates {
+	  (2,17) 
+      }; 
+      \addplot[ybar,red!80!black,fill=red] plot coordinates {
+	  (3,15) 
+      }; 
+      \addplot[ybar,blue!80!black,fill=blue] plot coordinates {
+	  (4,15) 
+      }; 
+      \addplot[ybar,purple!80!black,fill=purple] plot coordinates {
+	  (5,10) 
+      }; 
+      \addplot[ybar,yellow!80!black,fill=yellow] plot coordinates {
+	  (6,10) 
+      }; 
+      \addplot[ybar,gray!80!black,fill=gray] plot coordinates {
+	  (7,3) 
+      }; 
+  \end{axis} 
+\end{tikzpicture}  
 
  
 
